# floz

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  NOTICE  README.md
examples/: Cargo.toml  README.md
examples/src/: lib.rs
src/: config.rs  lib.rs  macros.rs  prelude.rs  router.rs  server.rs  session.rs  swagger-dark-theme.css
src/app/: boot.rs  context.rs  mod.rs  req.rs
src/auth/: api_key.rs  jwt.rs  mod.rs
src/cache/: mod.rs  pool.rs
src/controller/: format.rs  mod.rs  pagination.rs  validate.rs
src/db/: mod.rs  pool.rs  query.rs
src/errors/: api_error.rs  mod.rs
src/logger/: http_logger.rs  mod.rs  tracing_init.rs
src/middleware/: auth.rs  cache.rs  compression.rs  cors.rs  csrf.rs  mod.rs  pipeline.rs  rate_limit.rs  security.rs  session.rs  trace.rs
src/openapi/: mod.rs
src/swagger-ui-dist/: swagger-ui.css
src/testing/: mod.rs  request.rs
src/web/: channels.rs  mod.rs  upload.rs  ws.rs
src/worker/: broker.rs  message.rs  mod.rs  registry.rs  retry.rs  runner.rs
tests/: test_app.rs  test_auth.rs  test_cache.rs  test_controller.rs  test_db.rs  test_errors.rs  test_logger.rs  test_middleware.rs  test_openapi.rs  test_root.rs  test_testing.rs  test_worker.rs
