[package]
name = "floz"
version.workspace = true
edition = "2021"
description = "A batteries-included MVC web framework for Rust — built on ntex + Floz"
license = "MIT"
repository = "https://github.com/floz-rs/floz"
documentation = "https://docs.floz.pro"
homepage = "https://floz.pro"

[features]
default = ["full"]
full = ["auth", "worker", "logger", "openapi", "compression", "mailer"]
postgres = ["floz_orm/postgres"]
sqlite   = ["floz_orm/sqlite"]
auth = ["dep:jsonwebtoken", "dep:bcrypt", "dep:sha2", "dep:base64"]
worker = ["dep:redis"]
logger = ["dep:tracing-appender"]
openapi = ["dep:utoipa"]
compression = ["ntex/compress"]
mailer = []
rustls = ["dep:rustls", "dep:rustls-pemfile"]
ws = []


[dependencies]
# ORM — tightly integrated
floz_orm = { workspace = true }

# Core
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
inventory = "0.3"


# HTTP (ntex as default, pluggable via trait)
ntex = { workspace = true }
ntex-multipart = { workspace = true }
http = { workspace = true }

# Proc macros — re-exported
floz-macros = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true, optional = true }

# Auth & Crypto (feature-gated)
jsonwebtoken = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# Redis (feature-gated for workers)
redis = { workspace = true, optional = true }

# TLS
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }



# Utilities
dotenvy = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
nanoid = { workspace = true }

# OpenAPI (feature-gated)
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
